tests/errors/syntax.UnterminatedString.1.res
>> Syntax | File: syntax.UnterminatedString.1.art
    error | Line: 5
          | 
          | unterminated curly string
          | 
          | near: t { done } this { something el...
          |                       ^